package structure.decorator.image_process;

public class BorderDecorator extends ImageDecorator{

    public BorderDecorator(Image image) {
        super(image);
    }

    @Override
    public void process() {
        super.process();

    }
}
