package structure.decorator.image_process;

public abstract class Image {
    public abstract void process();
}
