package structure.decorator.image_process;

public class WatermarkDecorator {
}
